--- a/packaging/archlinux/dokytree/PKGBUILD
+++ b/packaging/archlinux/dokytree/PKGBUILD
@@ -5,7 +5,7 @@ _githubrepo=dokytree
 _gitcommit=56fa5970af2c659e730a850f923b6983a842f85c
 
 pkgname=dokytree-git
-pkgver=0.0.4
+pkgver=v0.0.5
 pkgrel=1
 pkgdesc='A versatil documentation system based on yaml files in directory tree with pugjs templates '
 arch=('any')
